--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 2rem;
   background-color: #f5f5f5;
 }
 
@@ -16,6 +16,11 @@ main {
   display: flex;
   gap: 2rem;
   font-size: 0.75rem;
+}
+
+h1 {
+  text-transform: uppercase;
+  letter-spacing: 1rem;
 }
 
 h2 {
@@ -78,4 +83,20 @@ h2 {
 
 .product-description {
   color: #a5a5a5;
+}
+
+.cart-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: #f5f5f5;
+  padding: 1rem;
+  border-radius: 0.75rem;
+}
+
+.price {
+  background-color: white;
+  grid-column: span 2;
+  text-align: center;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
 }
