--- a/style.css
+++ b/style.css
@@ -112,6 +112,66 @@ h2 {
   font-family: inherit;
 }
 
-label {
-  color: #a5a5a5;
+.color-selection-wrapper {
+  display: flex;
+  gap: 0.5rem;
+  grid-column: span 2;
+}
+
+form {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.only-screenreader {
+  position: absolute;
+  visibility: hidden;
+}
+
+.color-circle {
+  height: 1rem;
+  aspect-ratio: 1;
+  border-radius: 50%;
+}
+
+.color {
+  visibility: hidden;
+  position: absolute;
+}
+
+.color:checked + label > .color-circle {
+  outline: 0.1rem solid grey;
+  outline-offset: 0.1rem;
+}
+
+.blue {
+  background-color: #1f55af;
+}
+
+.red {
+  background-color: #da4841;
+}
+
+.black {
+  background-color: black;
+}
+
+.green-black {
+  background-image: linear-gradient(90deg, #989737 50%, black 50%);
+}
+
+.blue-black {
+  background-image: linear-gradient(90deg, #588ad8 50%, black 50%);
+}
+
+.pink-black {
+  background-image: linear-gradient(90deg, #d3658e 50%, black 50%);
+}
+
+.red-white {
+  background-image: linear-gradient(90deg, #ce3329 50%, white 50%);
+}
+
+.black-white {
+  background-image: linear-gradient(90deg, black 50%, white 50%);
 }
